--- a/H1/index.html
+++ b/H1/index.html
@@ -246,10 +246,10 @@
                         <div class="links">
                             <ul>
                                 <li>
-                                    <a href="http://go.kieran.top" title="Kieran's Blog" rel="title-tip" class="f-toe">Kieran's Blog</a>
+                                    <a href="http://go.kieran.top" title="Kieran's Blog" rel="title-tip" class="f-toe">Kieran</a>
                                 </li>
                                 <li>
-                                    <a href="http://3riccc.github.io/" title="Eric's Blog" rel="title-tip" class="f-toe">Eric's Blog</a>
+                                    <a href="http://3riccc.farbox.com/" title="Eric's Blog" rel="title-tip" class="f-toe">Eric</a>
                                 </li>
                                 <li>
                                     <a href="http://fhmou.com/" title="卢艳亮" rel="title-tip" class="f-toe">卢艳亮</a>
