--- a/H1/index.html
+++ b/H1/index.html
@@ -112,8 +112,8 @@
                         <div class="m-about">
                             <h1>关于Jake</h1>
                             <p>
-                                95后，双子座普通男青年，毕业于杭州一所大学信息安全专业。
-                                <br/> 喜欢刀郎的音乐,爱新鲜事物,爱旅游,爱摄影,爱折腾,喜欢沉浸在思考中。从事WEB前端开发,喜欢键盘敲击的声音。
+                                95后，双子座普通男青年，毕业于杭州电子科技大学信息安全专业。
+                                <br/> 喜欢刀郎、李宗盛,爱新鲜事物,爱旅游,爱摄影,爱折腾,喜欢沉浸在思考中。从事WEB前端开发,喜欢键盘敲击的声音。
                                 <br></p>
                         </div>
                         <div class="m-time">
