--- a/H1/index.html
+++ b/H1/index.html
@@ -252,6 +252,9 @@
                                     <a href="http://3riccc.farbox.com/" title="Eric's Blog" rel="title-tip" class="f-toe">Eric</a>
                                 </li>
                                 <li>
+                                    <a href="http://www.techrex.net/" title="techrex" rel="title-tip" class="f-toe">techrex</a>
+                                </li>
+                                <li>
                                     <a href="http://fhmou.com/" title="卢艳亮" rel="title-tip" class="f-toe">卢艳亮</a>
                                 </li>
                                 <!--<li>-->
