--- a/H1/index.html
+++ b/H1/index.html
@@ -252,11 +252,16 @@
                                     <a href="http://3riccc.farbox.com/" title="Eric's Blog" rel="title-tip" class="f-toe">Eric</a>
                                 </li>
                                 <li>
-                                    <a href="http://www.techrex.net/" title="techrex" rel="title-tip" class="f-toe">Techrex</a>
+                                    <a href="http://www.techrex.net/" title="Techrex" rel="title-tip" class="f-toe">Techrex</a>
+                                </li>
+                                <li>
+                                    <a href="http://bin16.farbox.com/" title="Bin16" rel="title-tip" class="f-toe">Bin16</a>
                                 </li>
                                 <li>
                                     <a href="http://fhmou.com/" title="卢艳亮" rel="title-tip" class="f-toe">卢艳亮</a>
                                 </li>
+                                
+                                
                                 <!--<li>-->
                                 <!--<a href="http://kayosite.com/" title="kayo's Blog" rel="title-tip" class="f-toe">kayo's Blog</a>-->
                                 <!--</li>-->
