--- a/H1/index.html
+++ b/H1/index.html
@@ -258,10 +258,7 @@
                                     <a href="http://bin16.farbox.com/" title="Bin16" rel="title-tip" class="f-toe">Bin16</a>
                                 </li>
                                 <li>
-                                    <a href="http://fhmou.com/" title="卢艳亮" rel="title-tip" class="f-toe">卢艳亮</a>
-                                </li>
-                                <li>
-                                    <a href="http://zjbrook.club/" title="zjbrook" rel="title-tip" class="f-toe">zjbrook</a>
+                                    <a href="http://zjbrook.club/" title="zjbrook" rel="title-tip" class="f-toe">Zjbrook</a>
                                 </li>
                                 
                                 
