--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
   <title>Jake</title>
   <link rel="shortcut icon" type="image/x-icon" href="/img/favicon.png" />
   <meta name="viewport" content="width=device-width, initial-scale=0.5" />
+  <meta name="google-site-verification" content="cz8Mg3uYnDt-czcMDitsmcjurvx-XknIM7wRb1-TNNo" />
 </head>
 
 <body>
