--- a/H1/index.html
+++ b/H1/index.html
@@ -11,6 +11,7 @@
     <meta name="renderer" content="webkit">
     <meta name="author" content="Jake">
     <meta name="version" content="6.0.3">
+    <meta name="google-site-verification" content="cz8Mg3uYnDt-czcMDitsmcjurvx-XknIM7wRb1-TNNo" />
     <link rel="apple-touch-icon-precomposed" href="img/luuman.png">
     <link rel="shortcut icon" type="image/ico" href="img/favicon.png">
 
