--- a/H1/index.html
+++ b/H1/index.html
@@ -19,6 +19,15 @@
     <link rel="stylesheet" href="css/index.min.css" />
     <link rel="stylesheet" href="css/loading.min.css">
 
+<script>
+var _hmt = _hmt || [];
+(function() {
+  var hm = document.createElement("script");
+  hm.src = "https://hm.baidu.com/hm.js?5c0a003d2ee7f1fef1ac0d657b741772";
+  var s = document.getElementsByTagName("script")[0]; 
+  s.parentNode.insertBefore(hm, s);
+})();
+</script>
 
 
 </head>
