--- a/H1/index.html
+++ b/H1/index.html
@@ -256,22 +256,22 @@ var _hmt = _hmt || [];
                         <div class="links">
                             <ul>
                                 <li>
-                                    <a href="http://go.kieran.top" title="Kieran's Blog" rel="title-tip" class="f-toe">Kieran</a>
+                                    <a href="http://go.kieran.top" title="Kieran's Blog" rel="title-tip"  target="_blank" class="f-toe">Kieran</a>
                                 </li>
                                 <li>
-                                    <a href="http://3riccc.farbox.com/" title="Eric's Blog" rel="title-tip" class="f-toe">Eric</a>
+                                    <a href="http://3riccc.farbox.com/" title="Eric's Blog" rel="title-tip" target="_blank" class="f-toe">Eric</a>
                                 </li>
                                 <li>
-                                    <a href="http://www.techrex.net/" title="Techrex" rel="title-tip" class="f-toe">Techrex</a>
+                                    <a href="http://www.techrex.net/" title="Techrex" rel="title-tip" target="_blank" class="f-toe">Techrex</a>
                                 </li>
                                 <li>
-                                    <a href="http://bin16.farbox.com/" title="Bin16" rel="title-tip" class="f-toe">Bin16</a>
+                                    <a href="http://bin16.farbox.com/" title="Bin16" rel="title-tip" target="_blank" class="f-toe">Bin16</a>
                                 </li>
                                 <li>
-                                    <a href="http://cheesemucha.cn/" title="Echo" rel="title-tip" class="f-toe">Echo</a>
+                                    <a href="http://cheesemucha.cn/" title="Echo" rel="title-tip" target="_blank" class="f-toe">Echo</a>
                                 </li>
                                 <li>
-                                    <a href="http://zjbrook.club/" title="zjbrook" rel="title-tip" class="f-toe">Zjbrook</a>
+                                    <a href="http://zjbrook.club/" title="zjbrook" rel="title-tip" target="_blank" class="f-toe">Zjbrook</a>
                                 </li>
                                 
                                 
