--- a/H1/index.html
+++ b/H1/index.html
@@ -42,8 +42,8 @@ var _hmt = _hmt || [];
     </div>
 
     <img src="img/logo-search.jpg" alt="Jake" style="visibility:hidden;position: absolute;top: 0;left: 0;">
-    <a class="music-wrap" id="smohan-v4-music" rel="title-tip" data-music-src="music/Asher Book - Try.mp3,music/The Scientist - Coldplay.mp3,music/I Love You - Stewart Mac.mp3,music/Tears in Heaven - Eric Clapton.mp3" data-music-flag="Y" title="">
-        <img id = "music-img" data-src="music/Asher Book - Try.jpg,music/The Scientist - Coldplay.jpg,music/I Love You - Stewart Mac.jpg,music/Tears in Heaven - Eric Clapton.jpg" alt="音乐播放器">
+    <a class="music-wrap" id="smohan-v4-music" rel="title-tip" data-music-src="music/Try - Asher Book.mp3,music/The Scientist - Coldplay.mp3,music/I Love You - Stewart Mac.mp3,music/Tears in Heaven - Eric Clapton.mp3" data-music-flag="Y" title="">
+        <img id = "music-img" data-src="music/Try - Asher Book.jpg,music/The Scientist - Coldplay.jpg,music/I Love You - Stewart Mac.jpg,music/Tears in Heaven - Eric Clapton.jpg" alt="音乐播放器">
         <span class="switch"><i></i>
         </span>
     </a>
