--- a/H1/index.html
+++ b/H1/index.html
@@ -256,10 +256,10 @@ var _hmt = _hmt || [];
                         <div class="links">
                             <ul>
                                 <li>
-                                    <a href="http://go.kieran.top" title="Kieran's Blog" rel="title-tip"  target="_blank" class="f-toe">Kieran</a>
+                                    <a href="http://go.kieran.top" title="Kieran" rel="title-tip"  target="_blank" class="f-toe">Kieran</a>
                                 </li>
                                 <li>
-                                    <a href="http://3riccc.farbox.com/" title="Eric's Blog" rel="title-tip" target="_blank" class="f-toe">Eric</a>
+                                    <a href="http://3riccc.farbox.com/" title="Eric" rel="title-tip" target="_blank" class="f-toe">Eric</a>
                                 </li>
                                 <li>
                                     <a href="http://www.techrex.net/" title="Techrex" rel="title-tip" target="_blank" class="f-toe">Techrex</a>
