--- a/H1/index.html
+++ b/H1/index.html
@@ -4,7 +4,7 @@
 <head>
     <title>Jake</title>
     <meta charset="UTF-8">
-    <meta name="keywords" content="Jake,JakeLaoyu,前端,HTML,CSS,JavaScript">
+    <meta name="keywords" content="Jake,JakeLaoyu,于成杰,前端,HTML,CSS,JavaScript,jQuery,nodejs">
     <meta name="description" content="Jake,95后，喜欢体验各种新鲜事物、爱折腾各种东西">
     <meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no">
     <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
@@ -123,7 +123,7 @@ var _hmt = _hmt || [];
                             <h1>关于Jake</h1>
                             <p>
                                 96年，双子座男青年，毕业于杭州电子科技大学信息安全专业。
-                                <br/> 喜欢刀郎、李宗盛,爱新鲜事物,爱旅游,爱摄影,爱折腾,喜欢沉浸在思考中。从事WEB前端开发,喜欢键盘敲击的声音。
+                                <br/> 喜欢经典、抒情音乐,喜欢有意义的短文,爱新鲜事物,爱旅游,爱摄影,爱折腾,喜欢沉浸在思考中。从事WEB前端开发,喜欢键盘敲击的声音。
                                 <br></p>
                         </div>
                         <div class="m-time">
