--- a/H1/index.html
+++ b/H1/index.html
@@ -62,12 +62,12 @@ var _hmt = _hmt || [];
                 <li>
                     <a href="http://i.jakeyu.top/archives/">Archives</a>
                 </li>
-                <!--<li>
-                    <a href="http://Jake.github.com/about/">留言</a>
-                </li>-->
-                <!--<li>
-                    <a href="http://Jake.github.com/FrontEndGuide/V1/">前端WEB圈</a>
-                </li>-->
+                <li>
+                    <a href="http://i.jakeyu.top/about/">留言</a>
+                </li>
+                <li>
+                    <a href="http://i.jakeyu.top/tags/">Tags</a>
+                </li>
             </ul>
             <span class="logo"></span>
         </div>
