--- a/H1/index.html
+++ b/H1/index.html
@@ -123,7 +123,7 @@ var _hmt = _hmt || [];
                             <h1>关于Jake</h1>
                             <p>
                                 96年，双子座帅哥，毕业于杭州电子科技大学信息安全专业。
-                                <br/> 喜欢经典、抒情音乐,喜欢有意义的短文,爱新鲜事物,爱旅游,爱摄影,爱折腾,喜欢沉浸在思考中。前端攻城狮一枚,喜欢键盘敲击的声音。
+                                <br/> 喜欢经典、抒情音乐,喜欢杂文、散文、出版读物,爱新鲜事物,爱旅游,爱摄影,爱折腾,喜欢沉浸在思考中。前端攻城狮一枚,喜欢键盘敲击的声音。
                                 <br></p>
                         </div>
                         <div class="m-time">
