--- a/H1/index.html
+++ b/H1/index.html
@@ -169,7 +169,7 @@ var _hmt = _hmt || [];
                     <div class="m-text">
                         <div class="inner">
                             <h1>不忘 · 初心</h1>
-                            <p>一切的创造，源于热爱...</p>
+                            <p>一切创造，源于热爱...</p>
                             <p>保持热枕,勿忘初心,在乱世中觅一份清净...</p>
                             <a href="http://i.jakeyu.top/" class="button">进入博客</a>
                         </div>
